benchmarks/real-verification/libXfont-1.4.7-sample/bug-log
[Wed Jul 24 15:49:02 UTC]root@3e7fa76cc3dc:libXfont-1.4.7-sample# make
/root/llvm/llvm80/build/bin/clang++ -flto -v -g -o main main.c -rdynamic /root/llvm/Prober/libprober.so
clang version 8.0.1 (https://github.com/llvm-mirror/clang.git 2e4c9c5fc864c2c432e4c262a67c42d824b265c6) (https://github.com/rqtian/llvm80-bufferoverflow.git 3b5df6d2abd65c292843e89e82bd69d3349a41e2)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /root/llvm/llvm80/build/bin
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/6
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/6.3.0
Selected GCC installation: /usr/lib/gcc/x86_64-linux-gnu/6.3.0
Candidate multilib: .;@m64
Selected multilib: .;@m64
clang-8: warning: treating 'c' input as 'c++' when in C++ mode, this behavior is deprecated [-Wdeprecated]
 "/root/llvm/llvm80/build/bin/clang-8" -cc1 -triple x86_64-unknown-linux-gnu -emit-llvm-bc -flto -flto-unit -disable-free -main-file-name main.c -mrelocation-model static -mthread-model posix -mdisable-fp-elim -fmath-errno -masm-verbose -mconstructor-aliases -munwind-tables -fuse-init-array -target-cpu x86-64 -dwarf-column-info -debug-info-kind=limited -dwarf-version=4 -debugger-tuning=gdb -v -resource-dir /root/llvm/llvm80/build/lib/clang/8.0.1 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/x86_64-linux-gnu/c++/6.3.0 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/x86_64-linux-gnu/c++/6.3.0 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0/backward -internal-isystem /usr/local/include -internal-isystem /root/llvm/llvm80/build/lib/clang/8.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -fdeprecated-macro -fdebug-compilation-dir /root/llvm/codesample/39apps/libXfont-1.4.7-sample -ferror-limit 19 -fmessage-length 143 -fobjc-runtime=gcc -fcxx-exceptions -fexceptions -fdiagnostics-show-option -fcolor-diagnostics -o /tmp/main-bf8f7f.o -x c++ main.c -faddrsig
clang -cc1 version 8.0.1 based upon LLVM 8.0.1 default target x86_64-unknown-linux-gnu
ignoring nonexistent directory "/include"
ignoring duplicate directory "/usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/x86_64-linux-gnu/c++/6.3.0"
#include "..." search starts here:
#include <...> search starts here:
 /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0
 /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/x86_64-linux-gnu/c++/6.3.0
 /usr/lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0/backward
 /usr/local/include
 /root/llvm/llvm80/build/lib/clang/8.0.1/include
 /usr/include/x86_64-linux-gnu
 /usr/include
End of search list.
main.c:7:5: error: unknown type name 'Bool'; did you mean 'bool'?
    Bool        subset;
    ^~~~
    bool
main.c:12:2: error: unknown type name 'fsConnSetup'
        fsConnSetup             *setup;
        ^
2 errors generated.
Makefile:8: recipe for target 'main' failed
make: *** [main] Error 1
[Wed Jul 24 15:51:14 UTC]root@3e7fa76cc3dc:libXfont-1.4.7-sample# 
